--- a/client/SmartGarden/package.json
+++ b/client/SmartGarden/package.json
@@ -23,6 +23,7 @@
     "@fullcalendar/core": "^4.4.0",
     "chart.js": "^2.9.3",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "primeicons": "^3.0.0-rc.1",
     "primeng": "^9.0.6",
     "quill": "^1.3.7",
